# pycfi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  testing.py
docs/superpowers/plans/: 2026-04-19-dx-improvements.md
src/pycfi/: __init__.py  decoder.py  map.py
tests/: test_decoder.py
