[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pycfi"
version = "0.1.0"
description = "Decode ISO 10962 CFI codes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "FinTechFelix" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/FinTechFelix/cfi-code-decoder"

[tool.hatch.build.targets.wheel]
packages = ["src/pycfi"]

